// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags With links renders correctly 1`] = `
<div>
  <div
    class="css-1vkozb1-boxStyles"
  >
    <h2
      class="css-1gsq1zi-boxStyles-Text"
    >
      Tags:
    </h2>
    <ul
      class="css-r6rwhv-boxStyles"
    >
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-to68c9-boxStyles"
        >
          <a
            class="css-15d9p2r-TextLink-boxStyles"
            href="#"
          >
            Foo
          </a>
        </span>
      </li>
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-to68c9-boxStyles"
        >
          <a
            class="css-15d9p2r-TextLink-boxStyles"
            href="#"
          >
            Bar
          </a>
        </span>
      </li>
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-to68c9-boxStyles"
        >
          <a
            class="css-15d9p2r-TextLink-boxStyles"
            href="#"
          >
            Baz
          </a>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags With onRemove renders correctly 1`] = `
<div>
  <div
    class="css-1vkozb1-boxStyles"
  >
    <h2
      class="css-1gsq1zi-boxStyles-Text"
    >
      Tags:
    </h2>
    <ul
      class="css-r6rwhv-boxStyles"
    >
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-2a7aao-boxStyles"
        >
          <a
            class="css-15d9p2r-TextLink-boxStyles"
            href="#"
          >
            Foo
          </a>
          <button
            aria-label="Remove Foo"
            class="css-a86tzs-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1krnro2-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-2a7aao-boxStyles"
        >
          <a
            class="css-15d9p2r-TextLink-boxStyles"
            href="#"
          >
            Bar
          </a>
          <button
            aria-label="Remove Bar"
            class="css-a86tzs-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1krnro2-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-2a7aao-boxStyles"
        >
          <a
            class="css-15d9p2r-TextLink-boxStyles"
            href="#"
          >
            Baz
          </a>
          <button
            aria-label="Remove Baz"
            class="css-a86tzs-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1krnro2-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags Without links renders correctly 1`] = `
<div>
  <div
    class="css-1vkozb1-boxStyles"
  >
    <h2
      class="css-1gsq1zi-boxStyles-Text"
    >
      Tags:
    </h2>
    <ul
      class="css-r6rwhv-boxStyles"
    >
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-1uqwk9u-boxStyles"
        >
          <span
            class="css-1l5cwjh-boxStyles"
          >
            Foo
          </span>
        </span>
      </li>
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-1uqwk9u-boxStyles"
        >
          <span
            class="css-1l5cwjh-boxStyles"
          >
            Bar
          </span>
        </span>
      </li>
      <li
        class="css-1l5cwjh-boxStyles"
      >
        <span
          class="css-1uqwk9u-boxStyles"
        >
          <span
            class="css-1l5cwjh-boxStyles"
          >
            Baz
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
